feat: implement market data service and client with historical data support